<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.NewTransactionActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/margin_middle"
            android:layout_marginTop="@dimen/margin_middle"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittxt_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_note"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/edittxt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_middle"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_amount"
                android:importantForAutofill="no"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_middle"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:text="@string/income" />

                <Switch
                    android:id="@+id/switch_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/expense" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_baseline_check_24"
                android:tint="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_big"
                android:contentDescription="@string/description_add_transaction" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>